[package]
name = "torsh-hub"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Model hub and pretrained model management for ToRSh"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
torsh-core = { workspace = true }
torsh-tensor = { workspace = true }
torsh-nn = { workspace = true }
tokio = { workspace = true, features = ["fs", "net"] }
reqwest = { version = "0.12.26", features = ["json", "stream", "blocking"] }
serde = { workspace = true }
serde_json = "1.0.145"
thiserror = { workspace = true }
dirs = "6.0.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.23"
toml = "0.9.10"
flate2 = "1.1.5"
tar = "0.4.44"
base64 = "0.22.1"
ort = { version = "2.0.0-rc.9" }
# SciRS2 compliance - replaces direct ndarray and rand usage
scirs2-core.workspace = true
scirs2-autograd.workspace = true
# tensorflow = { version = "0.21", optional = true }  # DISABLED: tensorflow-sys build issues - use ONNX Runtime (ort) instead
futures = "0.3"
futures-util = "0.3"
clap = { version = "4.5.53", features = ["derive"] }
uuid = { version = "1.19", features = ["v4"] }
indicatif = "0.18"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "hub_operations"
harness = false

[features]
default = []
# tensorflow = ["dep:tensorflow"]  # DISABLED: tensorflow-sys has build issues - use ONNX Runtime instead
