[package]
name = "torsh-hub"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Model hub and pretrained model management for ToRSh"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
torsh-core = { workspace = true }
torsh-tensor = { workspace = true }
torsh-nn = { workspace = true }
tokio = { workspace = true, features = ["fs", "net"] }
reqwest = { version = "0.13.1", features = ["json", "stream", "blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dirs = "6.0.0"
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
toml = "0.9.11"
flate2 = { workspace = true }
tar = { workspace = true }
base64 = "0.22.1"
ort = { version = "=2.0.0-rc.10" }  # Pinned to rc.10 for API stability (rc.11 has breaking changes)
# SciRS2 compliance - replaces direct ndarray and rand usage
scirs2-core.workspace = true
scirs2-autograd.workspace = true
# tensorflow = { version = "0.21", optional = true }  # DISABLED: tensorflow-sys build issues - use ONNX Runtime (ort) instead
futures = { workspace = true }
futures-util = { workspace = true }
clap = { version = "4.5.55", features = ["derive"] }
uuid = { workspace = true }
indicatif = "0.18"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hub_operations"
harness = false

[features]
default = []
# tensorflow = ["dep:tensorflow"]  # DISABLED: tensorflow-sys has build issues - use ONNX Runtime instead
