[package]
name = "torsh-metrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Comprehensive evaluation metrics for ToRSh - powered by SciRS2"

[lints]
workspace = true

[dependencies]
torsh-core = { workspace = true }
torsh-tensor = { workspace = true }

# SciRS2 metrics capabilities
scirs2-metrics = { workspace = true }
scirs2-core = { workspace = true }

# Additional dependencies
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
scirs2-autograd = { workspace = true }  # For array! macro in tests