[package]
name = "torsh-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Pre-trained models and model zoo for ToRSh deep learning framework"
keywords = ["tensor", "deep-learning", "models", "pretrained", "machine-learning"]
categories = ["science", "mathematics"]

[features]
default = ["vision", "nlp"]
vision = []
nlp = []
download = ["reqwest", "tokio"]

[dependencies]
# Core dependencies
torsh-core = { path = "../torsh-core" }
torsh-tensor = { path = "../torsh-tensor" }
torsh-nn = { path = "../torsh-nn" }
torsh-optim = { path = "../torsh-optim" }

# Serialization and I/O
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
safetensors = { workspace = true }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Model downloading (optional)
reqwest = { version = "0.11", features = ["json", "stream"], optional = true }
tokio = { workspace = true, features = ["fs", "io-util"], optional = true }

# File system and utilities
sha2 = "0.10"
hex = "0.4"

# Progress reporting
indicatif = "0.17"

# Async traits
async-trait.workspace = true

# Logging
tracing.workspace = true

# Utilities
dirs = "5.0"
lazy_static = "1.4"
futures-util = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
tempfile = "3.0"