[package]
name = "torsh-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Pre-trained models and model zoo for ToRSh deep learning framework"
keywords = ["tensor", "deep-learning", "models", "pretrained", "machine-learning"]
categories = ["science", "mathematics"]

[lints]
workspace = true

[features]
default = ["vision", "nlp", "audio", "multimodal"]
vision = []
nlp = []
audio = []
multimodal = []
gnn = []
vision_3d = []
video = []
generative = []
rl = []
domain = []
download = ["reqwest", "tokio"]

[dependencies]
# Core dependencies
torsh-core = { workspace = true }
torsh-tensor = { workspace = true }
torsh-nn = { workspace = true }
torsh-optim = { workspace = true }
torsh-linalg = { workspace = true }

# Serialization and I/O
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
safetensors = { workspace = true }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Model downloading (optional)
reqwest = { version = "0.13", features = ["json", "stream"], optional = true }
tokio = { workspace = true, features = ["fs", "io-util"], optional = true }

# File system and utilities
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }

# Progress reporting
indicatif = "0.18"

# Async traits
async-trait.workspace = true

# Logging
tracing.workspace = true

# Utilities
dirs = "6.0"
lazy_static = { workspace = true }
futures-util = { workspace = true }
parking_lot = { workspace = true }

# SciRS2 compliance - replaces direct rand usage
scirs2-core.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
tempfile = { workspace = true }
