[package]
name = "torsh-nn"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Neural network modules for ToRSh with PyTorch-compatible API"

[dependencies]
# Core dependencies
torsh-core = { path = "../torsh-core" }
torsh-tensor = { path = "../torsh-tensor" }
torsh-autograd = { path = "../torsh-autograd" }

# Leverage scirs2's neural network functionality
scirs2 = { workspace = true, features = ["neural"] }

# Utilities
num-traits = { workspace = true }
parking_lot = { workspace = true }
indexmap = { workspace = true }
bytemuck = "1.16"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
bincode = { version = "2.0", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
safetensors = { workspace = true, optional = true }

# Initialization
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
approx = { workspace = true }
tempfile = "3.0"

[features]
default = ["std"]
std = ["torsh-core/std", "torsh-tensor/std"]
serialize = ["serde", "serde_json", "bincode", "chrono", "torsh-core/serialize"]
safetensors = ["dep:safetensors", "serialize"]